--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>common-utils</module>
 		<module>common-log</module>
 		<module>common-web</module>
+		<module>common-context</module>
 		<module>common-cache</module>
 		<module>common-distributed</module>
 		<module>common-message-queue</module>
@@ -172,13 +173,13 @@
 				<groupId>org.glassfish</groupId>
 				<artifactId>javax.servlet</artifactId>
 				<version>${org.glassfish.javax.servlet.version}</version>
-				<scope>provided</scope>
+				<!-- <scope>provided</scope> -->
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish</groupId>
 				<artifactId>javax.servlet.jsp</artifactId>
 				<version>${org.glassfish.javax.servlet.version}</version>
-				<scope>provided</scope>
+				<!-- <scope>provided</scope> -->
 			</dependency>
 			<dependency>
 				<groupId>javax.servlet</groupId>
